# vi

./: .clang-format  CMakeLists.txt
tests/: bounding_box.cpp  open_file.cpp  split_lines.cpp
vi/: bounding_box.hpp  cursor_state.hpp  open_file.hpp  split_lines.hpp  vec2.hpp
